# curry-leaves-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  publish.sh  pyproject.toml
examples/: 01_basic.py  02_streaming.py  03_custom_tool.py  04_structured_output.py  05_subagents.py  06_host_and_permissions.py  07_mcp_tools.py  08_multimodal.py
src/curry_leaves/: __init__.py  agents.py  catalog.py  compaction.py  elision.py  permission.py  presets.py  prompt.py  runner.py  settings.py  skills.py  thinking.py
src/curry_leaves/cli/: chat.py  host.py  render.py  theme.py
src/curry_leaves/cli/tui/: app.py  controller.py  figlet.py  host.py  logo_image.py  state.py  widgets.py
src/curry_leaves/core/: agent.py  blobs.py  events.py  host.py  loop.py  messages.py  tools.py
src/curry_leaves/mcp/: __init__.py  client.py  config.py  manager.py  pick.py  server.py  tool.py
src/curry_leaves/providers/: anthropic.py  base.py  factory.py  openai.py  sse.py
src/curry_leaves/session/: __init__.py  replay.py  store.py
src/curry_leaves/tools/: ask.py  bash.py  current_time.py  edit.py  find.py  glob.py  read.py  search.py  search_tools.py  task.py  tasks.py  transfer.py  web.py  write.py
src/curry_leaves/util/: frontmatter.py  paths.py  resources.py  retry.py
tests/: test_elision.py  test_multimodal.py  test_session_fork.py
tests/mcp/: conftest.py  test_agent_integration.py  test_client_stdio.py  test_config.py  test_manager.py  test_pick.py  test_server.py  test_tool_adapter.py
tests/mcp/fixtures/: echo_server.py  http_echo_server.py
